Development history / change log, please read from bottom up

Version 3.x.y - xx yyy 2021
Generic changes/fixes
	* update copyright 2021
	* update dialog sizes to support uneven Windows scaling 
	
Device specific changes/fixes
	* JetiAdapter - fix check GPS data to enable Google Earth export
	* IGCAdapter - fix support configuring speed or others in KML/KMZ export

Version 3.4.6 - 26 Dec 2020
Generic changes/fixes
	* update XSD version to force device properties replacement
	* reduce flicker while measuring on Windows
	* fix error in history analyze while defined time outside existing file dates
	* fix adding wrong histoVault while picking vaults
	
Device specific changes/fixes
	* Weatronic-Telemetry - add error handling for cases buffer offset zero
	* HoTTAdapter* - add missing GPS values home direction - version

Version 3.4.5 - 17 Dec 2020
Generic changes/fixes
	* fix graphics update problem initiated by MAC OS update
	
Device specific changes/fixes
	*

Version 3.4.4 - 16 Nov 2020
Generic changes/fixes
	* fix statistics text position in description group to enable scroll
	* update DeviceProperties XSD V41
	* add manual setting to enable MAC OS touch bar support

Device specific changes/fixes
	* OnLineCommander - fix loading resource bundle
	* PolaronEx - fix exception while processing channel 2
	* Polaron* - fix processing detection channel 2
	* Core-Telemetry - initial release
	* JetiAdapter - update dialog width Windows
	* Pulsar3 - fix energy calculation
	* IGCAdapter - consider TDS entries if exist 
	* IGCAdapter - add 3D speed calculation

Version 3.4.3 - 09 Sep 2020
Generic changes/fixes
	* fix display problem of geo-coordinates in degree curve compare
	* update several naming
	* KMZ export, remove definition of relative altitude start point out of definition of LookAt

Device specific changes/fixes
	* OnLineCommander - add initial support
	* iChargerUSB - fix some possible exception in charger dialog reading data from connected device