@@ -519,7 +519,7 @@
             <Measurement>
                 <name>Vibration</name>
                 <symbol></symbol>
-                <unit>5</unit>
+                <unit>%</unit>
                 <active>true</active>
                 <statistics min="true" max="true" avg="true" sigma="false"/>
             </Measurement>
