@@ -8,6 +8,7 @@ Generic changes/fixes
 Device specific changes/fixes
 	* JetiAdapter - fix check GPS data to enable Google Earth export
 	* IGCAdapter - fix support configuring speed or others in KML/KMZ export
+	* HoTTAdapter* - fix unit of GPS vibration
 
 Version 3.4.6 - 26 Dec 2020
 Generic changes/fixes
